# rtimgui

./: .clang-format  CMakeLists.txt  CMakePresets.json  CmakeSettings.json  LICENSE  README.md
kernels/: CMakeLists.txt  shared.h  trace.cpp
scenes/stlMeshes/: box2.stl  cornellBox.stl  sphere.stl
src/: Aabb.h  CMakeLists.txt  DisplayWindow.cpp  DisplayWindow.h  Geometry.cpp  Geometry.h  ImageWriter.cpp  ImageWriter.h  MeshReader.cpp  MeshReader.h  Quaternion.h  RenderCases.h  Scene.cpp  Scene.h  TriangleMesh.cpp  TriangleMesh.h  assert.h  main.cpp
